--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "asana-cli"
-version = "0.10.0"
+version = "0.11.0"
 edition = "2024"
 rust-version = "1.86.0"
 authors = ["James Felix Black <jfb@workhelix.com>"]
@@ -44,12 +44,13 @@ anyhow = "1.0"
 colored = "3.0"
 directories = "6.0"
 tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "fs", "signal", "time"] }
+tokio-util = { version = "0.7", features = ["codec"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 rpassword = "7.4"
 secrecy = "0.10"
 sha2 = "0.10"
-reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
 async-stream = "0.3"
 thiserror = "2.0"
 base64 = "0.22"
